--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "npm start --prefix ./frontend",
     "dev": "concurrently \"npm start\" \"npm run client\""
   },
-  "author": "Abhinav Kumar Astha Rane Tanmay Bhatnagar Yatharth Gupta Rajat Patodi",
+  "author": "Anushka Negi",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
